# irrlicht-cmake

./: CMakeLists.txt
source/Irrlicht/MacOSX/: CIrrDeviceMacOSX.mm
