CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( irrlicht )

SET( IRRLICHT_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source/irrlicht )
SET( IRRLICHT_EXT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source/irrlicht )
SET( IRRLICHT_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include )

INCLUDE_DIRECTORIES( ${IRRLICHT_INC_DIR} ${IRRLICHT_SRC_DIR} )

FILE( GLOB IRRLICHT_SRC_FILES ${IRRLICHT_SRC_DIR}/*.cpp ${IRRLICHT_SRC_DIR}/*.c ${IRRLICHT_SRC_DIR}/*.h ${IRRLICHT_SRC_DIR}/*.hpp )

FILE( GLOB AESGLADMAN_SRC_FILES ${IRRLICHT_EXT_DIR}/aesGladman/*.cpp )
FILE( GLOB BZIP2_SRC_FILES ${IRRLICHT_EXT_DIR}/bzip2/*.c )
LIST( REMOVE_ITEM BZIP2_SRC_FILES ${IRRLICHT_EXT_DIR}/bzip2/bzip2.c ${IRRLICHT_EXT_DIR}/bzip2/bzip2recover.c ${IRRLICHT_EXT_DIR}/bzip2/dlltest.c ${IRRLICHT_EXT_DIR}/bzip2/mk251.c ${IRRLICHT_EXT_DIR}/bzip2/spewG.c ${IRRLICHT_EXT_DIR}/bzip2/unzcrash.c )
FILE( GLOB LZMA_SRC_FILES ${IRRLICHT_EXT_DIR}/lzma/*.c )
FILE( GLOB ZLIB_SRC_FILES ${IRRLICHT_EXT_DIR}/zlib/*.c )
LIST( REMOVE_ITEM ZLIB_SRC_FILES ${IRRLICHT_EXT_DIR}/zlib/gzclose.c ${IRRLICHT_EXT_DIR}/zlib/gzlib.c ${IRRLICHT_EXT_DIR}/zlib/gzread.c ${IRRLICHT_EXT_DIR}/zlib/gzwrite.c ${IRRLICHT_EXT_DIR}/zlib/infback.c )
FILE( GLOB JPEGLIB_SRC_FILES ${IRRLICHT_EXT_DIR}/jpeglib/j*.c )
LIST( REMOVE_ITEM JPEGLIB_SRC_FILES ${IRRLICHT_EXT_DIR}/jpeglib/jmemdos.c ${IRRLICHT_EXT_DIR}/jpeglib/jmemmac.c ${IRRLICHT_EXT_DIR}/jpeglib/jmemname.c ${IRRLICHT_EXT_DIR}/jpeglib/jmemansi.c ${IRRLICHT_EXT_DIR}/jpeglib/jpegtran.c )
FILE( GLOB LIBPNG_SRC_FILES ${IRRLICHT_EXT_DIR}/libpng/*.c )

IF( APPLE )
	FILE( GLOB IRRLICHT_OSX_SRC_FILES ${IRRLICHT_SRC_DIR}/MacOSX/*.mm )
	LIST( APPEND IRRLICHT_SRC_FILES ${IRRLICHT_OSX_SRC_FILES} )
	INCLUDE_DIRECTORIES( ${IRRLICHT_SRC_DIR}/MacOSX )
	FIND_LIBRARY( OPENGL_LIB OpenGL )
	FIND_LIBRARY( COCOA_LIB Cocoa )
	FIND_LIBRARY( CARBON_LIB Carbon )
	FIND_LIBRARY( IOKIT_LIB IOKit )
	LIST( APPEND IRRLICHT_LINK_LIBS ${OPENGL_LIB} ${IOKIT_LIB} ${COCOA_LIB} ${CARBON_LIB} )
	SET( CMAKE_XCODE_ATTRIBUTE_GCC_VERSION "com.apple.compilers.llvmgcc42" )
	ADD_DEFINITIONS( -DMACOSX )
ELSEIF( WIN32 )
	#LIST( APPEND JPEGLIB_SRC_FILES ${IRRLICHT_SRC_DIR}/jpeglib/jmemdos.c )
	ADD_DEFINITIONS( -D_USRDLL -DIRRLICHT_EXPORTS -D_CRT_SECURE_NO_DEPRECATE )
ENDIF(  )

SOURCE_GROUP( Irrlicht\\libraries\\aesGladman FILES ${AESGLADMAN_SRC_FILES} )
SOURCE_GROUP( Irrlicht\\libraries\\bzip2 FILES ${BZIP2_SRC_FILES} )
SOURCE_GROUP( Irrlicht\\libraries\\lzma FILES ${LZMA_SRC_FILES} )
SOURCE_GROUP( Irrlicht\\libraries\\zlib FILES ${ZLIB_SRC_FILES} )
SOURCE_GROUP( Irrlicht\\libraries\\jpeglib FILES ${JPEGLIB_SRC_FILES} )
SOURCE_GROUP( Irrlicht\\libraries\\libpng FILES ${LIBPNG_SRC_FILES} )
SOURCE_GROUP( Irrlicht\\Engine FILES ${IRRLICHT_SRC_FILES} )

SET( IRRLICHT_LIB_FILES ${AESGLADMAN_SRC_FILES} ${BZIP2_SRC_FILES} ${LZMA_SRC_FILES} ${ZLIB_SRC_FILES} ${JPEGLIB_SRC_FILES} ${LIBPNG_SRC_FILES} )


ADD_LIBRARY( irrlicht_static STATIC ${IRRLICHT_SRC_FILES} ${IRRLICHT_LIB_FILES} )
ADD_LIBRARY( irrlicht_shared SHARED ${IRRLICHT_SRC_FILES} ${IRRLICHT_LIB_FILES} )

TARGET_LINK_LIBRARIES( irrlicht_shared ${IRRLICHT_LINK_LIBS} )
